# RAG_gemini_project_july2026

./: audio_to_text.py  embeddings.csv  embeddings.py  main.py  pyproject.toml
data/: Kazhipathur 2.m4a  Kazhipathur 3.m4a  Kazhipathur.m4a
rag/: rag.ipynb  rag.py
rag/vector_db/: chroma.sqlite3
tool_binding/: duckduckgo.ipynb
vector_db/: chroma.sqlite3
