[project]
name = "ai-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "ddgs>=9.14.4",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "google-genai>=2.0.1",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-text-splitters>=1.1.2",
    "mediawikiapi>=1.3",
    "pypdf>=6.14.2",
    "recursivecharactertextsplitter>=0.1.0",
    "wikibase-rest-api-client>=0.2.5",
    "wikipedia>=1.4.0",
]
